BAsic THeme setting changes
In this update theme and collection UI setting.

--- a/sections/product-faq.liquid
+++ b/sections/product-faq.liquid
@@ -77,7 +77,7 @@
 
 {% schema %}
 {
-  "name": "Product FAQ",
+  "name": "Product Description",
   "tag": "section",
   "class": "section",
   "disabled_on": {
@@ -224,7 +224,7 @@
     },
     {
       "type": "caption",
-      "name": "FAQ Text caption",
+      "name": "Text caption",
       "limit": 3,
       "settings": [
         {
