Custom Video Section Title
Custom Video Section Title adjusted with proper text

--- a/sections/how-to-use-video.liquid
+++ b/sections/how-to-use-video.liquid
@@ -216,7 +216,7 @@ button.btn-pdf-dwn-swd > img {
 
 {% schema %}
 {
-  "name": "how-to-use-video",
+  "name": "Product Info video",
   "tag": "section",
   "class": "section",
   "disabled_on": {
